# rust_crud_api

./: .env  Cargo.toml  LICENSE  readme.md  tasks.db
src/: db.rs  handlers.rs  jwt.rs  main.rs  models.rs
