[package]
name = "rust_crud_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
dotenv = "0.15.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = {version = "0.4.39", features = ["serde"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.138"
futures = "0.3.31"
